cmake_minimum_required(VERSION 3.21)
project(c_code C)

set(CMAKE_C_STANDARD 99)

add_executable(hello-world 1_hello-world/main.c)
add_executable(basic-grammar-1_variable 2_basic-grammar/1_variable.c)
add_executable(basic-grammar-2_scanf 2_basic-grammar/2_scanf.c)
add_executable(basic-grammar-3_getchar 2_basic-grammar/3_getchar.c)
add_executable(basic-grammar-4_putchar 2_basic-grammar/4_putchar.c)
add_executable(basic-grammar-5_printf 2_basic-grammar/5_printf.c)
add_executable(array-1_array 3_array/1_array.c)
add_executable(array-2_charArray 3_array/2_charString.c)
add_executable(array-3_getsAndPuts 3_array/3_getsAndPuts.c)
add_executable(array-4_strFunctions 3_array/4_strFunctions.c)
add_executable(pointer-1_pointerPassed 4_pointer/1_pointerPassed.c)
add_executable(pointer-2_pointerOffset 4_pointer/2_pointerOffset.c)
add_executable(pointer-3_pointerAuto-increment 4_pointer/3_pointerAuto-increment.c)
add_executable(pointer-4_pointerAndArray 4_pointer/4_pointerAndArray.c)
add_executable(pointer-5_dynamicPointer 4_pointer/5_dynamicPointer.c)
add_executable(pointer-6_heapAndStack 4_pointer/6_heapAndStack.c)
add_executable(pointer-7_secondaryPointerPassed 4_pointer/7_secondaryPointerPassed.c)
add_executable(struct-1_structDefinition 5_struct/1_structDefinition.c)
add_executable(struct-2_structPointer 5_struct/2_structPointer.c)
add_executable(struct-3_typedef 5_struct/3_typedef.c)